[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voxel_engine"
path = "src/lib.rs"

[[bin]]
name = "vx"
path = "src/main.rs"

[dependencies]
vulkano = "0.34.1"
winit = "0.29.4"
