[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voxel_engine"
path = "src/lib.rs"

[[example]]
name = "tri"
path = "src/triangle_with_direct_vertex_manipulation.rs"
[[example]]
name = "tri_cs"
path = "src/triangle_with_compute_shader.rs"

[dependencies]
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28"
